--- a/reminder.html
+++ b/reminder.html
@@ -26,11 +26,11 @@
 </head>
 
 <body>
-    <section class="d-flex justify-content-center align-items-center">
+    <section >
         <div class="mb-3">
-            <input type="email" class="form-control" > 
+            <input type="email" class="form-control" placeholder="Enter here..." >
         </div>
-        <button class="btn btn-success" type="submit">Send Link</button>
+       
     </section>
 </body>
 </html>
