--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
 </head>
 
 <body>
-    <section class="d-flex justify-content-center align-items-center">
-        <div class="mb-3">
-            <input type="email" class="form-control" > 
+    <section class="d-flex justify-content-center align-items-center" style="height: 100vh;" >
+        <div class="mb-3 p-5 d-flex flex-column">
+            <label for="text" class="form-label my-2">Enter Reminder</label>
+            <input type="text"  name="text" class="form-control" > 
+            <button class="btn btn-success my-4" type="submit">Send Link</button>
         </div>
-        <button class="btn btn-success" type="submit">Send Link</button>
     </section>
 </body>
 </html>
