--- a/reminder.html
+++ b/reminder.html
@@ -26,11 +26,15 @@
 </head>
 
 <body>
-    <section >
-        <div class="mb-3">
-            <input type="email" class="form-control" placeholder="Enter here..." >
+    <section class="d-flex justify-content-center align-items-center" style="height: 100vh;" >
+        <div class="mb-3 p-5 d-flex flex-column ">
+            <label for="text" class="form-label my-2">Enter Reminder</label>
+            <input type="text" name="text" class="form-control" placeholder="Enter here..." >
+
+            <label for="date_time" class="form-label my-2">Select time</label>
+            <input type="datetime-local" name="date_time"  class="form-control" id="birthdaytime" name="birthdaytime">
+            <button class="btn btn-success my-4" type="submit">Save</button>
         </div>
-       
     </section>
 </body>
 </html>
