--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
     <section class="d-flex justify-content-center align-items-center" style="height: 100vh;" >
         <div class="mb-3 p-5 d-flex flex-column">
-            <label for="text" class="form-label my-2">Enter Reminder</label>
+            <label for="text" class="form-label my-2">Meeting Link</label>
             <input type="text"  name="text" class="form-control" > 
             <button class="btn btn-success my-4" type="submit">Send Link</button>
         </div>
