--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 </head>
 
 <body>
-    <section class="d-flex justify-content-center align-items-center" style="height: 100vh;" >
-        <div class="mb-3 p-5 d-flex flex-column">
+    <section class="d-flex justify-content-center align-items-center" style="height: 100vh; width: 100%" >
+        <div class="mb-3 px-2 d-flex flex-column">
             <label for="text" class="form-label my-2">Meeting Link</label>
-            <input type="text"  name="text" class="form-control" > 
-            <button class="btn btn-success my-4" type="submit">Send Link</button>
+            <input type="text"  name="text" class="form-control" placeholder="Paster your meeting link"> 
+            <button class="btn btn-success my-4" type="submit">Save Link</button>
         </div>
     </section>
 </body>
