--- a/reminder.html
+++ b/reminder.html
@@ -25,11 +25,11 @@
 
 </head>
 <body>
-    <section class="d-flex justify-content-center align-items-center" style="height: 100vh;" >
-        <div class="mb-3 p-5 d-flex flex-column ">
+    <section class="d-flex justify-content-center align-items-center" style="height: 100vh; width:100%" >
+        <div class="mb-3 px-2 d-flex flex-column ">
+            <label for="text" class="form-label my-2">What should i remind you about?</label>
             <input type="text" name="text" class="form-control" placeholder="Enter here..." >
-
-            <label for="date_time" class="form-label my-2">Select time</label>
+            <label for="date_time" class="form-label my-2">Enter reminder time</label>
             <input type="datetime-local" name="date_time"  class="form-control" id="birthdaytime" name="birthdaytime">
             <button class="btn btn-success my-4" type="submit">Save</button>
         </div>
