--- a/index.html
+++ b/index.html
@@ -21,16 +21,20 @@
         Telegram.WebApp.onEvent('themeChanged', setThemeClass);
         setThemeClass();
 
+        function webviewClose() {
+        Telegram.WebApp.close();
+    }
+
     </script>
 
 </head>
 
 <body>
-    <section class="d-flex justify-content-center align-items-center" style="height: 100vh; width: 100%" >
-        <div class="mb-3 px-2 d-flex flex-column">
+    <section class="d-flex justify-content-center " style="height: 100vh; width: 100%" >
+        <div class="mb-3 mt-3 p-2 d-flex flex-column" style="width:100%">
             <label for="text" class="form-label my-2">Meeting Link</label>
-            <input type="text"  name="text" class="form-control" placeholder="Paster your meeting link"> 
-            <button class="btn btn-success my-4" type="submit">Save Link</button>
+            <input type="text"  name="text" class="form-control" placeholder="Eg: meet.google.com/zrs-kydu-dvh"> 
+            <button class="btn btn-success my-4" type="submit" onClick={webviewClose}>Save Link</button>
         </div>
     </section>
 </body>
