--- a/reminder.html
+++ b/reminder.html
@@ -21,17 +21,20 @@
         Telegram.WebApp.onEvent('themeChanged', setThemeClass);
         setThemeClass();
 
+        function webviewClose() {
+        Telegram.WebApp.close();
+    }
     </script>
 
 </head>
 <body>
-    <section class="d-flex justify-content-center align-items-center" style="height: 100vh; width:100%" >
-        <div class="mb-3 px-2 d-flex flex-column ">
+    <section class="d-flex justify-content-center" style="height: 100vh; width:100%" >
+        <div class="mb-3 px-2 d-flex flex-column mt-3" style="width:100%">
             <label for="text" class="form-label my-2">What should i remind you about?</label>
             <input type="text" name="text" class="form-control" placeholder="Enter here..." >
             <label for="date_time" class="form-label my-2">Enter reminder time</label>
             <input type="datetime-local" name="date_time"  class="form-control" id="birthdaytime" name="birthdaytime">
-            <button class="btn btn-success my-4" type="submit">Save</button>
+            <button class="btn btn-success my-4" type="submit" onClick={webviewClose}>Save</button>
         </div>
     </section>
 </body>
