--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="mb-3 mt-3 p-2 d-flex flex-column" style="width:100%">
             <label for="text" class="form-label my-2">Meeting Link</label>
             <input type="text"  name="text" class="form-control" placeholder="Eg: meet.google.com/zrs-kydu-dvh"> 
-            <button class="btn btn-success my-4" type="submit" onClick={webviewClose}>Save Link</button>
+            <button class="btn btn-success my-4" type="submit" onClick="webviewClose()">Save Link</button>
         </div>
     </section>
 </body>
