--- a/reminder.html
+++ b/reminder.html
@@ -34,7 +34,7 @@
             <input type="text" name="text" class="form-control" placeholder="Enter here..." >
             <label for="date_time" class="form-label my-2">Enter reminder time</label>
             <input type="datetime-local" name="date_time"  class="form-control" id="birthdaytime" name="birthdaytime">
-            <button class="btn btn-success my-4" type="submit" onClick={webviewClose}>Save</button>
+            <button class="btn btn-success my-4" type="submit" onClick="webviewClose()">Save</button>
         </div>
     </section>
 </body>
