--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport"
-          content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+        content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="format-detection" content="telephone=no" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="MobileOptimized" content="176" />
     <meta name="HandheldFriendly" content="True" />
-    
+
     <meta name="robots" content="noindex,nofollow" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
     <title></title>
     <script src="https://telegram.org/js/telegram-web-app.js?1"></script>
     <script>
@@ -22,20 +26,86 @@
         setThemeClass();
 
         function webviewClose() {
-        Telegram.WebApp.close();
-    }
+            Telegram.WebApp.close();
+        }
+        function getQueryVariable(variable) {
+            var query = window.location.search.substring(1);
+            var vars = query.split("&");
+            for (var i = 0; i < vars.length; i++) {
+                var pair = vars[i].split("=");
+                if (pair[0] == variable) {
+                    return pair[1];
+                }
+            }
+            alert('Query Variable ' + variable + ' not found');
+        }
+
+        async function saveLink() {
+            const res = await fetch("http://localhost:4000/api/bot/addMeeting", {
+                method: "post",
+                headers: {
+                    'Accept': 'application/json',
+                    'Content-Type': 'application/json'
+                },
+                //make sure to serialize your JSON body
+                body: JSON.stringify({
+                    "bot_id": getQueryVariable('botId'),
+                    "host_chat_id": getQueryVariable('hostChatId'),
+                    "receiver_chat_id": getQueryVariable('receiverChatId'),
+                    "meeting_link": "DataTypes.TEXT"
+                })
+            })
+            if (res.status === 200) {
+                await fetch("https://api.telegram.org/" + getQueryVariable('botId') + "/sendMessage?chat_id=" + getQueryVariable('receiverChatId') + "&text=MeetingLink Saved", {
+                    method: "get",
+                    headers: {
+                        'Accept': 'application/json',
+                        'Content-Type': 'application/json'
+                    },
+                })
+                await fetch("https://api.telegram.org/" + getQueryVariable('botId') + "/sendMessage?chat_id=" + getQueryVariable('hostChatId') + "&text=hello%20world", {
+                    method: "get",
+                    headers: {
+                        'Accept': 'application/json',
+                        'Content-Type': 'application/json'
+                    },
+                })
+            }
+            console.log({ res })
+            // .then((response) => {
+            //     if (response.status === 200) {
+            //         fetch("https://api.telegram.org/bot5656598831:AAFJhMPZtvBlCmSgiZbDw_NiyCJA9g0uoBM/sendMessage?chat_id=1135390370&text=hello%20world", {
+            //             method: "get",
+            //             headers: {
+            //                 'Accept': 'application/json',
+            //                 'Content-Type': 'application/json'
+            //             },
+            //             //make sure to serialize your JSON body
+
+            //         }).then((response) => { return response.json(); });
+            //     }
+            //     //do something awesome that makes the world a better place
+            // });
+        }
 
     </script>
 
 </head>
 
 <body>
-    <section class="d-flex justify-content-center " style="height: 100vh; width: 100%" >
+    <section class="d-flex justify-content-center " style="height: 100vh; width: 100%">
         <div class="mb-3 mt-3 p-2 d-flex flex-column" style="width:100%">
+            <span id="locationData"></span>
+
             <label for="text" class="form-label my-2">Meeting Link</label>
-            <input type="text"  name="text" class="form-control" placeholder="Eg: meet.google.com/zrs-kydu-dvh"> 
-            <button class="btn btn-success my-4" type="submit" onClick="webviewClose()">Save Link</button>
+            <input type="text" name="text" class="form-control" placeholder="Eg: meet.google.com/zrs-kydu-dvh">
+            <button class="btn btn-success my-4" type="submit" onClick="saveLink()">Save Link</button>
         </div>
     </section>
 </body>
+<script>
+    document.querySelector('#locationData').innerHTML = window.location.toString()
+
+</script>
+
 </html>
